Fix flickering of tooltips in certain situations

--- a/src/MouseOver.scss
+++ b/src/MouseOver.scss
@@ -8,4 +8,5 @@
 	padding: 6px;
 	border-radius: 6px;
 	background-color: rgba(0, 0, 0, 0.7);
+	pointer-events: none;
 }
